[gd_scene load_steps=5 format=3 uid="uid://b476143sjl2hv"]

[ext_resource type="Script" uid="uid://br6ta3aexehl1" path="res://scenes/dropable/soul_part.gd" id="1_odyn1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fh0ft"]
resource_local_to_scene = true
transparency = 3
alpha_hash_scale = 1.0
alpha_antialiasing_mode = 0
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture_force_srgb = true

[sub_resource type="SphereMesh" id="SphereMesh_fh0ft"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_fh0ft")
radius = 0.05
height = 0.1
radial_segments = 6
rings = 4

[sub_resource type="SphereShape3D" id="SphereShape3D_nt723"]
radius = 0.3

[node name="SoulPart" type="Node3D"]
script = ExtResource("1_odyn1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_fh0ft")

[node name="Area3D" type="Area3D" parent="MeshInstance3D"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/Area3D"]
shape = SubResource("SphereShape3D_nt723")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="MeshInstance3D/Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
